--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a class="social"><i class="fab fa-linkedin"></i></a>
+                                        <a class="social" href="www.linkedin.com/in/sofia-chalkiadaki-5393b1140"><i class="fab fa-linkedin"></i></a>
                                     </td>
                                 </tr>
                             </table>
