linkedin url working

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button class="btn_one">Hire Me</button><br>
                 <table>
                     <tr>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-linkedin"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofia-chalkiadaki-5393b1140" target="_blank"><i class="fab fa-linkedin"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -90,7 +90,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a class="social" href="www.linkedin.com/in/sofia-chalkiadaki-5393b1140" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                        <a class="social" href="https://linkedin.com/in/sofia-chalkiadaki-5393b1140" target="_blank"><i class="fab fa-linkedin"></i></a>
                                     </td>
                                 </tr>
                             </table>
