--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <tr>
                 <td id="logo">Sofia Chalkiadaki</td>
                 <td id="navigation">
-                    <a href="#work">work</a>
+                    <a href="#work">projects</a>
                     <a href="#bio">about</a>
                     <a href="">blog</a>
                     <a href="#contact">contact</a>
@@ -46,15 +46,24 @@
         </tr>
     </table>
     <div id="work">
-        <h1>work</h1>
-        <div id="photos">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1547922657-b370d1687eb1?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1549375463-8cbc18ca3f24?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1549366021-9f761d450615?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=650&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1549309019-a1d77aeae74f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1547149666-769b42053e67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=564&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1547950515-e652d0f50b1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1545342084-d03fe58ea023?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=633&q=80">
+        <h1>projects</h1>
+        <div class="hvrbox">
+            <img src="https://i.ibb.co/nLxzMpZ/max-bender-ol-Xfar5-J3-WE-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
+            <div class="hvrbox-layer_top">
+                <div class="hvrbox-text">Coronavirus</div>
+            </div>
+        </div>
+        <div class="hvrbox">
+            <img src="https://i.ibb.co/FnFCQRc/erik-odiin-jb-Qv-Jx2-EWn-U-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
+            <div class="hvrbox-layer_top">
+                <div class="hvrbox-text">Travel Scrapping</div>
+            </div>
+        </div>
+        <div class="hvrbox">
+            <img src="https://i.ibb.co/d79DrC5/veeterzy-Uw-Br-S-q-RMHo-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
+            <div class="hvrbox-layer_top">
+                <div class="hvrbox-text">CO Emission</div>
+            </div>
         </div>
     </div>
     <div id="bio">
@@ -108,7 +117,11 @@
             </table>
     </div>
     <div id="footer">
-        made on earth by a human <br> <a href="https://imfunniee.github.io">imfunniee</a>
+        <small> Special thanks to <a href="https://imfunniee.github.io">imfunniee</a>
+            <a href="https://unsplash.com/photos/jbQvJx2EWnU">, Erik Odiin</a>
+            <a href="https://unsplash.com/photos/olXfar5J3WE">, Max Bender</a>
+            <a href="https://unsplash.com/photos/UwBrS-qRMHo">, veeterzy</a>
+        </small>
     </div>
     <script src="index.js" type="text/javascript"></script>
 </body>
