Add bio from Linkedin

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div id="bio">
         <h1>about</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Thorough and meticulous Data Analyst with strong research and analytical background. Passionate about helping businesses succeed. MRes in Drug Discovery and Development at Imperial College London. Experience with: Python; Data Extraction, Data Processing, Data Mining, Web Scraping, VBA & Excel; Data Processing, Data Analysis, Data Visualisation, SQL; Performing queries on MS Access
         </p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
