Open thanks links to other tabs

--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
     </div>
     <div id="footer">
         <small> Special thanks to <a href="https://imfunniee.github.io">imfunniee</a>
-            <a href="https://unsplash.com/photos/jbQvJx2EWnU">, Erik Odiin</a>
-            <a href="https://unsplash.com/photos/olXfar5J3WE">, Max Bender</a>
-            <a href="https://unsplash.com/photos/UwBrS-qRMHo">, veeterzy</a>
+            <a href="https://unsplash.com/photos/jbQvJx2EWnU" target="_blank">, Erik Odiin</a>
+            <a href="https://unsplash.com/photos/olXfar5J3WE" target="_blank">, Max Bender</a>
+            <a href="https://unsplash.com/photos/UwBrS-qRMHo" target="_blank">, veeterzy</a>
+            <a href="https://unsplash.com/photos/zE007SNgcdE" target="_blank">, Fabian Grohs</a>
         </small>
     </div>
     <script src="index.js" type="text/javascript"></script>
