Del Contact form, add more icons

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <table>
                     <tr>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofia-chalkiadaki-5393b1140" target="_blank"><i class="fab fa-linkedin"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/open?id=1d3zQnQ8LZSWwzypFWj40elj6l-QoSeX2" target="_blank"><i class="fas fa-file-pdf"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -99,19 +102,15 @@
                                 </tr>
                                 <tr>
                                     <td>
+
                                         <a class="social" href="https://linkedin.com/in/sofia-chalkiadaki-5393b1140" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                        <a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
+                                        <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                                        <a class="social" href="https://drive.google.com/open?id=1d3zQnQ8LZSWwzypFWj40elj6l-QoSeX2" target="_blank"><i class="fas fa-file-pdf"></i></a>
                                     </td>
                                 </tr>
                             </table>
                         </div>
-                    </td>
-                    <td>
-                        <form>
-                            <input type="text" placeholder="name" required>
-                            <input type="email" placeholder="email" required><br>
-                            <textarea placeholder="your message" required rows="5"></textarea><br>
-                            <button class="btn_one">send</button>
-                        </form> 
                     </td>
                 </tr>
             </table>
