--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
     <div id="loading">
         <div id="spinner"></div>
     </div>
-    <div id="magnify">
-        <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
-        <div id="img_here"></div>
-    </div>
     <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
         <table>
             <tr>
                 <td id="logo">Sofia Chalkiadaki</td>
                 <td id="navigation">
+                    <a href="#top_part">home</a>
                     <a href="#work">projects</a>
                     <a href="#bio">about</a>
-                    <a href="">blog</a>
+                    <a href="#career">career</a>
                     <a href="#contact">contact</a>
                 </td>
             </tr>
