updated linkedin url

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <h1>Passionate about Data and Programming</h1>
                 <table>
                     <tr>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofia-chalkiadaki-5393b1140" target="_blank"><i class="fab fa-linkedin"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank"><i class="fab fa-linkedin"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/open?id=1d3zQnQ8LZSWwzypFWj40elj6l-QoSeX2" target="_blank"><i class="fas fa-file-pdf"></i></a></td>
                     </tr>
@@ -98,7 +98,7 @@
                                 <tr>
                                     <td>
 
-                                        <a class="social" href="https://linkedin.com/in/sofia-chalkiadaki-5393b1140" target="_blank" ><i class="fab fa-linkedin"></i></a>
+                                        <a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" ><i class="fab fa-linkedin"></i></a>
                                         <a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
                                         <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
                                         <a class="social" href="https://drive.google.com/open?id=1d3zQnQ8LZSWwzypFWj40elj6l-QoSeX2" target="_blank"><i class="fas fa-file-pdf"></i></a>
