--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank"><i class="fab fa-linkedin"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/file/d/1999bt2P21zGikJ-ckPj9iSx52ed_CyLV/view?usp=sharing" target="_blank"><i class="fas fa-file-pdf"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/open?id=1QSSbPI00L6f9aqQT9WXOOLhvksM-vjFF" target="_blank"><i class="fas fa-file-pdf"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -101,7 +101,7 @@
                                         <a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" ><i class="fab fa-linkedin"></i></a>
                                         <a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
                                         <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
-                                        <a class="social" href="https://drive.google.com/file/d/1999bt2P21zGikJ-ckPj9iSx52ed_CyLV/view?usp=sharing" target="_blank"><i class="fas fa-file-pdf"></i></a>
+                                        <a class="social" href="https://drive.google.com/open?id=1QSSbPI00L6f9aqQT9WXOOLhvksM-vjFF" target="_blank"><i class="fas fa-file-pdf"></i></a>
                                     </td>
                                 </tr>
                             </table>
