--- a/index.html
+++ b/index.html
@@ -89,15 +89,12 @@
                                 <tr>
                                     <td><i class="fas fa-map-marker-alt"></i>
                                     <div id="address">
-                                        14 Stonor Road,<br>
-                                        London,<br>
-                                        W14 8RZ
+                                        W14, London<br>
                                     </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-
                                         <a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" ><i class="fab fa-linkedin"></i></a>
                                         <a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
                                         <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
