--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank"><i class="fab fa-linkedin"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/open?id=1H4ikxtU-A7MhGFEnXihf5rxTDXLoTpsk" target="_blank"><img src="https://i.ibb.co/BKdYBQc/icons8-resume-24-1.png"/></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/open?id=1H4ikxtU-A7MhGFEnXihf5rxTDXLoTpsk" target="_blank"><i class="fas fa-user"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -98,7 +98,7 @@
                                         <a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" ><i class="fab fa-linkedin"></i></a>
                                         <a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
                                         <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
-                                        <a class="social" href="https://drive.google.com/open?id=1H4ikxtU-A7MhGFEnXihf5rxTDXLoTpsk" target="_blank"><img src="https://i.ibb.co/BKdYBQc/icons8-resume-24-1.png"/></a>
+                                        <a class="social" href="https://drive.google.com/open?id=1H4ikxtU-A7MhGFEnXihf5rxTDXLoTpsk" target="_blank"><i class="fas fa-user"></i></a>
                                     </td>
                                 </tr>
                             </table>
