Update about section

--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
     <div id="bio">
         <h1>about</h1>
         <p>
-             Thorough and meticulous Data Analyst with strong research and analytical background. Passionate about helping businesses succeed. MRes in Drug Discovery and Development at Imperial College London. Experience with: Python; Data Extraction, Data Processing, Data Mining, Web Scraping, VBA & Excel; Data Processing, Data Analysis, Data Visualisation, SQL; Performing queries on MS Access
+            Hello!
+            My name is Sofia Chalkiadaki. This website is built to share part of my work.
         </p>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            I first came in London in 2017 to complete my Master's degree in Drug Discovery & Development at Imperial College. During this year, I fall in love with this place of endless opportunities. My journey in data was initiated in 2018 when I started my first job as an R&D Scientist. I started learning Python & SQL by attending online courses and later on, starting implementing my new skills in my job. These days, I work as a Data Analyst at Accor leading multiple different projects. I have a proven capability to work independently and in teams, lead and mentor co-workers, and communicate with both technical and non-technical stakeholders.
+        </p>
+        <p>
+           In a nutshell, I am a self-taught programmer, constantly trying to expand my horizons and broaden my skill set. I’m always happy to chat about coding and meet new people. If you’d like to contact me, drop me a line via LinkedIn or Email.
         </p>
     </div>
     <div id="contact">
