Add a line in the about section about Accor

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             My name is Sofia Chalkiadaki. This website is built to share part of my work.
         </p>
         <p>
-            I first came in London in 2017 to complete my Master's degree in Drug Discovery & Development at Imperial College. During this year, I fall in love with this place of endless opportunities. My journey in data was initiated in 2018 when I started my first job as an R&D Scientist. I started learning Python & SQL by attending online courses and later on, starting implementing my new skills in my job. These days, I work as a Data Analyst at Accor leading multiple different projects. I have a proven capability to work independently and in teams, lead and mentor co-workers, and communicate with both technical and non-technical stakeholders.
+            I first came in London in 2017 to complete my Master's degree in Drug Discovery & Development at Imperial College. During this year, I fall in love with this place of endless opportunities. My journey in data was initiated in 2018 when I started my first job as an R&D Scientist. I started learning Python & SQL by attending online courses and later on, starting implementing my new skills in my job. These days, I work as a Data Analyst at Accor leading multiple different projects regarding data validation, data manipulation, web scrapping, etc. I have a proven capability to work independently and in teams, lead and mentor co-workers, and communicate with both technical and non-technical stakeholders.
         </p>
         <p>
            In a nutshell, I am a self-taught programmer, constantly trying to expand my horizons and broaden my skill set. I’m always happy to chat about coding and meet new people. If you’d like to contact me, drop me a line via LinkedIn or Email.
