add play icon on covid image - decrease animation-delay

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="loading">
         <div id="spinner"></div>
     </div>
-    <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
+    <header id="header" class="animated slideInDown" style="animation-delay:2s;">
         <table>
             <tr>
                 <td id="logo">Sofia Chalkiadaki</td>
@@ -29,7 +29,7 @@
     </header>
     <table id="top_part">
         <tr>
-            <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
+            <td id="about" class="animated slideInLeft" style="animation-delay:1.5s;">
                 <h1>Passionate about Data and Programming</h1>
                 <table>
                     <tr>
@@ -40,7 +40,7 @@
                     </tr>
                 </table>
             </td>
-            <td id="rightImage" class="animated jackInTheBox" style="animation-delay:2.2s;"></td>
+            <td id="rightImage" class="animated jackInTheBox" style="animation-delay:1.5s;"></td>
         </tr>
     </table>
     <div id="work">
@@ -49,6 +49,7 @@
             <img src="https://i.ibb.co/nLxzMpZ/max-bender-ol-Xfar5-J3-WE-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
             <div class="hvrbox-layer_top">
                 <div class="hvrbox-text">Coronavirus</div>
+                <button class="btn"><a class="btn" href="https://github.com/SofiaChalk" target="_blank"><i class="fas fa-play" title="Run"></i></a></button>
             </div>
         </div>
         <div class="hvrbox">
