--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank"><i class="fab fa-linkedin"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/open?id=1wB5qr8d4gndnYpIFQCg_bziIrU77ESJu" target="_blank"><i class="fas fa-user"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/open?id=1McupQqb5EwPIQhEjNfLIsm5uaD_VHkN0" target="_blank"><i class="fas fa-user"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -86,15 +86,13 @@
                         <div id="inner_div">
                             <table id="inner_table">
                                 <tr>
-                                    <td><i class="fas fa-mobile-alt"> </i> &nbsp;+44 7736978669 </td>
-                                </tr>
-                                <tr>
                                     <td><i class="fas fa-at"></i> &nbsp;sofiachalk@outlook.com</td>
                                 </tr>
                                 <tr>
                                     <td><i class="fas fa-map-marker-alt"></i>
                                     <div id="address">
-                                        W14, London<br>
+                                        London,<br>
+                                        United Kingdom<br>
                                     </div>
                                     </td>
                                 </tr>
@@ -103,7 +101,7 @@
                                         <a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" ><i class="fab fa-linkedin"></i></a>
                                         <a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
                                         <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
-                                        <a class="social" href="https://drive.google.com/open?id=1wB5qr8d4gndnYpIFQCg_bziIrU77ESJu" target="_blank"><i class="fas fa-user"></i></a>
+                                        <a class="social" href="https://drive.google.com/open?id=1McupQqb5EwPIQhEjNfLIsm5uaD_VHkN0" target="_blank"><i class="fas fa-user"></i></a>
                                     </td>
                                 </tr>
                             </table>
@@ -120,6 +118,20 @@
             <a href="https://unsplash.com/photos/zE007SNgcdE" target="_blank">, Fabian Grohs</a>
         </small>
     </div>
+    <script src="brython.js"></script>
+<script src="brython_stdlib.js"></script>
+<body onload="brython()">
+    <button id="btn"></button>
+</body>
+<script type="text/python">
+    from browser import document, alert
+    from Covid-19 import *
+     def sofia():
+        print('sofia')
+    document['btn'].bind("click", sofia)
+    document <= "hello"
+</script>
     <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
+
