--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <tr>
                                     <td>
                                         <a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" ><i class="fab fa-linkedin"></i></a>
-                                        <a class="social" href="https://https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
+                                        <a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
                                         <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
                                         <a class="social" href="https://drive.google.com/open?id=1McupQqb5EwPIQhEjNfLIsm5uaD_VHkN0" target="_blank"><i class="fas fa-user"></i></a>
                                     </td>
