--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank"><i class="fab fa-linkedin"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/open?id=1McupQqb5EwPIQhEjNfLIsm5uaD_VHkN0" target="_blank"><i class="fas fa-user"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/file/d/1HKvFco7VBoCENI5R9_oBPh19EALtga4a/view?usp=sharing" target="_blank"><i class="fas fa-user"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -48,7 +48,7 @@
         <div class="hvrbox">
             <img src="https://i.ibb.co/nLxzMpZ/max-bender-ol-Xfar5-J3-WE-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
             <div class="hvrbox-layer_top">
-                <div class="hvrbox-text">Coronavirus</div>
+                <div class="hvrbox-text" href="https://sc-covid19.herokuapp.com/" >Coronavirus</div>
                 <button class="btn"><a class="btn" href="https://sc-covid19.herokuapp.com/" target="_blank"><i class="fas fa-play" title="Run"></i></a></button>
             </div>
         </div>
@@ -101,7 +101,7 @@
                                         <a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" ><i class="fab fa-linkedin"></i></a>
                                         <a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
                                         <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
-                                        <a class="social" href="https://drive.google.com/open?id=1McupQqb5EwPIQhEjNfLIsm5uaD_VHkN0" target="_blank"><i class="fas fa-user"></i></a>
+                                        <a class="social" href="https://drive.google.com/file/d/1HKvFco7VBoCENI5R9_oBPh19EALtga4a/view?usp=sharing" target="_blank"><i class="fas fa-user"></i></a>
                                     </td>
                                 </tr>
                             </table>
