--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img src="https://i.ibb.co/nLxzMpZ/max-bender-ol-Xfar5-J3-WE-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
             <div class="hvrbox-layer_top">
                 <div class="hvrbox-text" href="https://sc-covid19.herokuapp.com/" >Coronavirus</div>
-                <button class="btn"><a class="btn" href="https://sc-covid19.herokuapp.com/" target="_blank"><i class="fas fa-play" title="Run"></i></a></button>
+                <button class="btn"><a class="btn" href="https://sc-covid19-dash.herokuapp.com/" target="_blank"><i class="fas fa-play" title="Run"></i></a></button>
             </div>
         </div>
         <div class="hvrbox">
