--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div class="hvrbox">
             <img src="https://i.ibb.co/FnFCQRc/erik-odiin-jb-Qv-Jx2-EWn-U-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
             <div class="hvrbox-layer_top">
-                <div class="hvrbox-text">Travel Scrapping</div>
+                <div class="hvrbox-text">Coming Soon</div>
             </div>
         </div>
         <div class="hvrbox">
             <img src="https://i.ibb.co/d79DrC5/veeterzy-Uw-Br-S-q-RMHo-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
             <div class="hvrbox-layer_top">
-                <div class="hvrbox-text">CO Emission</div>
+                <div class="hvrbox-text">Coming Soon</div>
             </div>
         </div>
     </div>
