add flight scrapping github link

--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
         <div class="hvrbox">
             <img src="https://i.ibb.co/nLxzMpZ/max-bender-ol-Xfar5-J3-WE-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
             <div class="hvrbox-layer_top">
-                <div class="hvrbox-text" href="https://sc-covid19.herokuapp.com/" >Coronavirus</div>
+                <div class="hvrbox-text">Coronavirus</div>
                 <button class="btn"><a class="btn" href="https://sc-covid19-dash.herokuapp.com/" target="_blank"><i class="fas fa-play" title="Run"></i></a></button>
             </div>
         </div>
         <div class="hvrbox">
             <img src="https://i.ibb.co/FnFCQRc/erik-odiin-jb-Qv-Jx2-EWn-U-unsplash.jpg" alt="Mountains" class="hvrbox-layer_bottom">
             <div class="hvrbox-layer_top">
-                <div class="hvrbox-text">Coming Soon</div>
+                <div class="hvrbox-text">Flight Scrapping</div>
+                <button class="btn"><a class="btn" href="https://github.com/SofiaChalk/Flight-Scrapping.git" target="_blank"><i class="fas fa-play" title="Run"></i></a></button>
             </div>
         </div>
         <div class="hvrbox">
