--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank"><i class="fab fa-linkedin"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/file/d/1HKvFco7VBoCENI5R9_oBPh19EALtga4a/view?usp=sharing" target="_blank"><i class="fas fa-user"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://drive.google.com/file/d/1s4ivyqWGc_gEX0Qrh2IoybdS8NwEr-bg/view?usp=sharing" target="_blank"><i class="fas fa-user"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -70,13 +70,19 @@
         <h1>about</h1>
         <p>
             Hello!
-            My name is Sofia Chalkiadaki. This website is built to share part of my work.
+            Welcome to my website! My name is Sofia Chalkiadaki. Let's get to know each other.
         </p>
         <p>
-            I first came in London in 2017 to complete my Master's degree in Drug Discovery & Development at Imperial College. During this year, I fall in love with this place of endless opportunities. My journey in data was initiated in 2018 when I started my first job as an R&D Scientist. I started learning Python & SQL by attending online courses and later on, starting implementing my new skills in my job. These days, I work as a Data Analyst at Accor leading multiple different projects regarding data validation, data manipulation, web scrapping, etc. I have a proven capability to work independently and in teams, lead and mentor co-workers, and communicate with both technical and non-technical stakeholders.
+            I always thought my dream was to be in a chemisty lab, experimenting with different molecules and be the next breakthrough in Science. This dream goes well with my Master's degree in Drug Discovery & Development @ Imperial College London. I started my first job in an analytical lab where I would spend half of my time in the lab and the rest in front of the PC analysing data.
         </p>
         <p>
-           In a nutshell, I am a self-taught programmer, constantly trying to expand my horizons and broaden my skill set. I’m always happy to chat about coding and meet new people. If you’d like to contact me, drop me a line via <a href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" style="color:rgba(255,44,90)">Linkedin</a> or <a href="mailto:sofiachalk@outlook.com" target="_blank" style="color:rgba(255,44,90)"> Email</a>.
+            This is when I felt the spark; what if there was a way to make this analysis easier, more interesting and better-looking? So, I attended my first Python course online. I was mind blown with the possibilities. I continued learning SQL and heard that we had Microsoft Access at work. The transition was initiated! No more tens of pieces of paper on my desk. I could access every piece of information from my screen. It even helped the environment!
+        </p>
+        <p>
+            Since then, I haven't stopped! I, now, have hands-on experience in web scraping, data analysis, data validation, data mining and data visualisation. I write my programs in Python and use SQL to retrieve data. I present my findings in interactive dashboards I build with Python Dash-Plotly, Excel, VBA and Power BI. I am a strong storyteller able to communicate with stakeholders coming from both technical and non-technical backgrounds .
+        </p>
+        <p>
+           In a nutshell, I am a self-taught programmer, constantly trying to expand my horizons and broaden my skill set. There is yet more to learn, yet more problems to solve and yet more to build. I’m always happy to chat about coding and meet new people. If you’d like to contact me, drop me a line via <a href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" style="color:rgba(255,44,90)">Linkedin</a> or <a href="mailto:sofiachalk@outlook.com" target="_blank" style="color:rgba(255,44,90)"> Email</a>.
         </p>
     </div>
     <div id="contact">
@@ -102,7 +108,7 @@
                                         <a class="social" href="https://linkedin.com/in/sofiachalkiadaki" target="_blank" ><i class="fab fa-linkedin"></i></a>
                                         <a class="social" href="https://github.com/SofiaChalk" target="_blank"><i class="fab fa-github"></i></a>
                                         <a class="social" href="mailto:sofiachalk@outlook.com" target="_blank"><i class="fas fa-envelope"></i></a>
-                                        <a class="social" href="https://drive.google.com/file/d/1HKvFco7VBoCENI5R9_oBPh19EALtga4a/view?usp=sharing" target="_blank"><i class="fas fa-user"></i></a>
+                                        <a class="social" href="https://drive.google.com/file/d/1s4ivyqWGc_gEX0Qrh2IoybdS8NwEr-bg/view?usp=sharing" target="_blank"><i class="fas fa-user"></i></a>
                                     </td>
                                 </tr>
                             </table>
